--- a/app/src/main/res/layout/activity_calandar.xml
+++ b/app/src/main/res/layout/activity_calandar.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".View.Activity.CalandarActivity"
-    android:background="@color/Fresh_Guacamole_05">
+    android:background="@color/Fresh_Guacamole_05"
+    android:fitsSystemWindows="true">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_calandaractivity"
@@ -71,9 +72,151 @@
             android:layout_height="wrap_content">
          <include
              layout="@layout/bg_calcander_view"/>
-            <com.project.diary.Model.DiaryCalandarView
+            <RelativeLayout
                 android:layout_width="333dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="230dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal"
+                    android:gravity="left">
+
+                    <TextView
+                        android:id="@+id/txtMonth"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_bold"
+                        android:textSize="20sp"
+                        android:text="November"
+                        android:textColor="@color/Fresh_Guacamole_03"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="20dp"/>
+                    <TextView
+                        android:id="@+id/txtYear"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_medium"
+                        android:textSize="11sp"
+                        android:text="2022"
+                        android:textColor="@color/Fresh_Guacamole_03"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="5dp"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:orientation="horizontal"
+                    android:gravity="right">
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/cvBtnToday"
+                        android:layout_width="62dp"
+                        android:layout_height="20.38dp"
+                        app:cardBackgroundColor="@color/Fresh_Guacamole_04"
+                        app:cardCornerRadius="30dp"
+                        app:cardElevation="0dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginRight="20dp">
+                      <LinearLayout
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:orientation="vertical"
+                          android:gravity="center">
+                          <TextView
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:fontFamily="@font/inter_medium"
+                              android:textSize="11sp"
+                              android:textColor="@color/white"
+                              android:text="Today"
+                              android:gravity="center"/>
+                      </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="48dp"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="@color/Fresh_Guacamole_04"
+                            android:textAlignment="center"
+                            android:text="SUN"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="#33000000"
+                            android:textAlignment="center"
+                            android:text="MON"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="#33000000"
+                            android:textAlignment="center"
+                            android:text="TUE"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="#33000000"
+                            android:textAlignment="center"
+                            android:text="WED"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="#33000000"
+                            android:textAlignment="center"
+                            android:text="THU"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="#33000000"
+                            android:textAlignment="center"
+                            android:text="FRI"/>
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="11sp"
+                            android:textColor="@color/Fresh_Guacamole_04"
+                            android:textAlignment="center"
+                            android:text="SAT"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                      <androidx.viewpager.widget.ViewPager
+                          android:id="@+id/vpCalendar"
+                          android:layout_width="match_parent"
+                          android:layout_height="match_parent"/>
+                    </LinearLayout>
+                </LinearLayout>
+
+            </RelativeLayout>
         </RelativeLayout>
 
     </LinearLayout>
