--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,12 +14,13 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.Diary.NoActionBar" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Theme.Diary.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
         <item name="android:statusBarColor">#00000000</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
     <style name="Theme.Diary.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
