--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,7 @@
                     android:orientation="vertical"
                     android:gravity="left|center">
                     <ImageView
+                        android:id="@+id/imgOpenCalanderActivity"
                         android:layout_marginLeft="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
