--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/Fresh_Guacamole_05"
@@ -14,6 +15,7 @@
         android:orientation="vertical"
         android:gravity="left |center">
         <ImageView
+            android:id="@+id/close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icon_close_stroke"
@@ -57,7 +59,6 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
-
 <!--    Toolbar 2-->
 <RelativeLayout
     android:layout_width="match_parent"
@@ -87,6 +88,7 @@
             app:cardElevation="0dp"
             app:cardCornerRadius="100dp">
             <TextView
+                android:gravity="center"
                 android:id="@+id/txtEmojiStatus"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
@@ -95,5 +97,127 @@
     </LinearLayout>
 
 </RelativeLayout>
-
+<!--    Text Editor-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="50dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            android:fontFamily="@font/inter"
+            android:textColor="@color/black"
+            android:hint="Tittle"/>
+        <com.project.diary.Model.RichEditor.RichEditor
+            android:id="@+id/mEditor"
+            android:layout_marginTop="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#00000000"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center |bottom">
+        <androidx.cardview.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="10dp"
+            app:cardCornerRadius="10dp">
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:scrollbars="none"
+                android:overScrollMode="never"
+                android:layout_gravity="center">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:gravity="center">
+                    <ImageButton
+                        android:id="@+id/imgbtnBackground"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_background_black"
+                        android:layout_marginRight="15dp"
+                        android:layout_marginLeft="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnImage"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_iamge_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnSticker"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_sticker_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnEmoji"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_emoji_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnTextTool"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_texttool_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnList"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_list_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnTag"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_tag_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnVoice"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_voice_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnBrush"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_brush_black"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                </LinearLayout>
+            </HorizontalScrollView>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </RelativeLayout>
