--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
                     android:orientation="vertical"
                     android:gravity="center">
                     <androidx.cardview.widget.CardView
+                        android:id="@+id/cvNewDiary"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
                         app:cardBackgroundColor="@color/Fresh_Guacamole_04"
@@ -88,6 +89,7 @@
                     android:orientation="vertical"
                     android:gravity="right|center">
                     <ImageView
+                        android:id="@+id/imgMine"
                         android:layout_marginRight="20dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
