--- a/app/src/main/res/layout/activity_calandar.xml
+++ b/app/src/main/res/layout/activity_calandar.xml
@@ -221,11 +221,13 @@
         </RelativeLayout>
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="bottom |right">
+        android:gravity="bottom |right"
+        android:orientation="vertical">
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cvNewDiary"
             android:layout_width="40dp"
@@ -233,15 +235,17 @@
             android:layout_margin="20dp"
             app:cardBackgroundColor="@color/Fresh_Guacamole_04"
             app:cardCornerRadius="100dp">
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icon_add_white"/>
+                    android:src="@drawable/icon_add_white" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
