--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="toolbar_mainactivity">50dp</dimen>
     <dimen name="navigativebottom_mainactivity">75dp</dimen>
     <dimen name="toolbar_calandaractivity">50dp</dimen>
+    <dimen name="toolbar_media_activity">50dp</dimen>
 </resources>
