--- a/app/src/main/res/drawable/icon_undo_large.xml
+++ b/app/src/main/res/drawable/icon_undo_large.xml
@@ -1,20 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="13dp"
-    android:height="13dp"
-    android:viewportWidth="10"
-    android:viewportHeight="10">
+    android:width="37dp"
+    android:height="37dp"
+    android:viewportWidth="37"
+    android:viewportHeight="37">
   <path
-      android:pathData="M1,1L9,9"
+      android:pathData="M4.47,18.5H32.22"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#2B2F31"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M1,9L9,1"
+      android:pathData="M13.72,27.75L4.47,18.5L13.72,9.25"
       android:strokeLineJoin="round"
       android:strokeWidth="2"
       android:fillColor="#00000000"
-      android:strokeColor="#2B2F31"
+      android:strokeColor="#000000"
       android:strokeLineCap="round"/>
 </vector>
