--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -112,7 +112,7 @@
             android:background="@null"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="18sp"
             android:fontFamily="@font/inter"
             android:textColor="@color/black"
             android:hint="Tittle"/>
@@ -122,15 +122,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00000000"/>
+
+<!--        TAGS-->
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:gravity="center |bottom">
+
+<!--        Main tool-->
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="30dp"
+            app:cardElevation="0dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="10dp"
@@ -154,6 +160,30 @@
                         android:src="@drawable/icon_background_black"
                         android:layout_marginRight="15dp"
                         android:layout_marginLeft="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnBold"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_bold"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnItalic"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_italic"
+                        android:layout_marginRight="15dp"
+                        android:background="@null"/>
+                    <ImageButton
+                        android:id="@+id/imgbtnUnderline"
+                        android:layout_weight="1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/icon_underline"
+                        android:layout_marginRight="15dp"
                         android:background="@null"/>
                     <ImageButton
                         android:id="@+id/imgbtnImage"
@@ -222,5 +252,149 @@
                 </LinearLayout>
             </HorizontalScrollView>
         </androidx.cardview.widget.CardView>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center |bottom"
+        android:orientation="vertical">
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cvTextTool"
+            android:visibility="gone"
+            app:cardElevation="10dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/white">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:text="Font"
+                            android:textColor="@color/black"
+                            android:fontFamily="@font/inter_bold"
+                            android:textSize="15sp"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="right |center">
+                        <ImageView
+                            android:id="@+id/imgCompleteTextTool"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/baseline_check_24"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="left |center">
+                        <ImageView
+                            android:id="@+id/imgCloseTextTool"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/icon_close_stroke"/>
+                    </LinearLayout>
+                </RelativeLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:layout_marginRight="10dp"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:weightSum="3">
+                        <ImageButton
+                            android:id="@+id/imgbtnAlignLeft"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/icon_align_text_left"
+                            android:background="@null"/>
+                        <ImageButton
+                            android:id="@+id/imgbtnAlignCenter"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/icon_align_text_center"
+                            android:background="@null"/>
+                        <ImageButton
+                            android:id="@+id/imgbtnAlignRight"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/icon_align_text_right"
+                            android:background="@null"/>
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.5"
+                        android:orientation="horizontal"
+                        android:gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:weightSum="3">
+                        <ImageButton
+                            android:id="@+id/imgbtnH1"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/icon_h1"
+                            android:background="@null"/>
+                        <ImageButton
+                            android:id="@+id/imgbtnH2"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/icon_h2"
+                            android:background="@null"/>
+                        <ImageButton
+                            android:id="@+id/imgbtnH3"
+                            android:layout_weight="1"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/icon_h3"
+                            android:background="@null"/>
+                    </LinearLayout>
+                </LinearLayout>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcvColorPicker"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never"
+                    android:scrollbars="none"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+<!--    Emoji-->
+    <LinearLayout
+        android:visibility="gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <com.aghajari.emojiview.view.AXEmojiEditText
+            android:id="@+id/edt"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="enter your message ..." />
     </LinearLayout>
 </RelativeLayout>
