--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,14 @@
     <color name="Fresh_Guacamole_05">#D6EDF7</color>
     <color name="not_choose_state">#4D000000</color>
 
+    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorAccent">#FF4081</color>
+
+    <color name="darkBackground">#161D26</color>
+    <color name="darkWindow">#1E2632</color>
+    <color name="darkPrimary">#232D3A</color>
+    <color name="darkPrimaryDark">#1B242D</color>
+    <color name="darkAccent">#82ADD9</color>
+    <color name="white_transperent">#40ffffff</color>
 </resources>
