Add Feature: +Search Diary +Delete Multi Diary

--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/Root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true"
@@ -83,6 +85,7 @@
         android:orientation="vertical"
         android:layout_marginRight="20dp">
         <androidx.cardview.widget.CardView
+            android:id="@+id/cvStatus"
             android:layout_width="26dp"
             android:layout_height="26dp"
             app:cardBackgroundColor="#0D000000"
@@ -121,6 +124,8 @@
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:overScrollMode="never"
             android:background="#00000000"/>
 
 <!--        TAGS-->
@@ -226,6 +231,7 @@
                         android:layout_marginRight="15dp"
                         android:background="@null"/>
                     <ImageButton
+                        android:visibility="gone"
                         android:id="@+id/imgbtnTag"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
@@ -234,6 +240,7 @@
                         android:layout_marginRight="15dp"
                         android:background="@null"/>
                     <ImageButton
+                        android:visibility="gone"
                         android:id="@+id/imgbtnVoice"
                         android:layout_weight="1"
                         android:layout_width="wrap_content"
