--- a/app/src/main/res/layout/activity_calandar.xml
+++ b/app/src/main/res/layout/activity_calandar.xml
@@ -28,6 +28,7 @@
             android:layout_marginLeft="20dp"/>
     </LinearLayout>
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_calandaractivity"
         android:orientation="horizontal"
