--- a/app/src/main/res/layout/activity_calandar.xml
+++ b/app/src/main/res/layout/activity_calandar.xml
@@ -17,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/icon_back_black"
+            android:background="?selectableItemBackgroundBorderless"
             android:layout_marginLeft="20dp"/>
         <TextView
             android:layout_width="wrap_content"
@@ -64,11 +65,14 @@
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:overScrollMode="never"
+        android:isScrollContainer="true"
+        android:layout_marginTop="@dimen/toolbar_calandaractivity">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/toolbar_calandaractivity"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center">
             <com.project.diary.Model.Calendar.MyMaterialCalendarView
@@ -82,9 +86,8 @@
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/Fresh_Guacamole_05"
-                app:cardElevation="10dp"
-                android:orientation="vertical">
+                app:cardBackgroundColor="#E3F2FD"
+                app:cardElevation="10dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -98,6 +101,22 @@
                         android:text="November 2022"
                         android:fontFamily="@font/inter_medium"
                         android:textColor="@color/Fresh_Guacamole_01"/>
+                    <!--    RecycleView Diary Item-->
+                    <TextView
+                        android:id="@+id/txtNoDiary"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="No diary for this day..."
+                        android:gravity="center"
+                        android:fontFamily="@font/inter_medium"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:visibility="gone"
+                        android:id="@+id/rcvDiary"
+                        android:scrollbars="none"
+                        android:overScrollMode="never"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="5dp"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
@@ -115,6 +134,7 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_margin="20dp"
+            android:foreground="?android:attr/selectableItemBackground"
             app:cardBackgroundColor="@color/Fresh_Guacamole_04"
             app:cardCornerRadius="100dp">
 
