--- a/app/src/main/res/layout/item_rcvdiary.xml
+++ b/app/src/main/res/layout/item_rcvdiary.xml
@@ -26,6 +26,7 @@
                     android:orientation="vertical"
                     android:layout_marginLeft="20dp">
                     <include
+                        android:id="@+id/Date"
                         layout="@layout/layout_date"/>
                 </LinearLayout>
                 <LinearLayout
