--- a/app/src/main/res/layout/layout_date.xml
+++ b/app/src/main/res/layout/layout_date.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/txtDate"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <LinearLayout
@@ -8,7 +9,7 @@
         android:orientation="horizontal"
         android:gravity="bottom">
         <TextView
-            android:id="@+id/some_id"
+            android:id="@+id/txtDay"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="31"
@@ -17,20 +18,25 @@
             android:textColor="@color/black"
             />
         <TextView
-            android:id="@+id/oct_2022"
+            android:id="@+id/txtMonth"
+            android:layout_marginLeft="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Oct 2022"
+            android:text="Oct"
             android:textSize="10sp"
             android:fontFamily="@font/inter_bold"
             android:textColor="@color/black"
             />
-<!--        <ImageView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginBottom="1.5dp"-->
-<!--            android:layout_marginLeft="3dp"-->
-<!--            android:src="@drawable/icon_morearrow_stroke"/>-->
+        <TextView
+            android:id="@+id/txtYear"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2022"
+            android:textSize="10sp"
+            android:fontFamily="@font/inter_bold"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
         <View
             android:id="@+id/rectangle_4"
