--- a/app/src/main/res/menu/menu_navdrawer_mainactivity.xml
+++ b/app/src/main/res/menu/menu_navdrawer_mainactivity.xml
@@ -15,6 +15,7 @@
 <!--            android:icon="@drawable/icon_tag_strock_navdrawer"-->
 <!--            android:title="Tags manager"/>-->
         <item
+            android:id="@+id/menu_item_lockapp"
             android:icon="@drawable/icon_lock_strock_navdrawer"
             android:title="Lock Diary"/>
         <item
