--- a/app/src/main/res/layout/dialog_status_picker.xml
+++ b/app/src/main/res/layout/dialog_status_picker.xml
@@ -9,7 +9,7 @@
     android:gravity="right|top">
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         android:layout_marginTop="90dp"
         android:layout_marginRight="20dp"
@@ -17,7 +17,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_margin="20dp"
+            android:layout_margin="10dp"
             android:gravity="center"
             android:orientation="vertical">
             <TextView
