--- a/app/src/main/res/layout/item_rcvdiary.xml
+++ b/app/src/main/res/layout/item_rcvdiary.xml
@@ -18,17 +18,32 @@
 <!--            Date and status-->
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="35dp">
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="left |top"
-                    android:orientation="vertical"
+                    android:layout_height="35dp"
+                    android:gravity="left |bottom"
+                    android:orientation="horizontal"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="10dp">
                     <include
                         android:id="@+id/Date"
                         layout="@layout/layout_date"/>
+                    <ImageView
+                        android:id="@+id/imgDraft"
+                        android:layout_marginLeft="15dp"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:src="@drawable/icon_draft"/>
+                    <TextView
+                        android:id="@+id/txtDraft"
+                        android:layout_marginLeft="3dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="Draft"
+                        android:textColor="#A8BCC5"
+                        android:textSize="12sp"
+                        android:gravity="bottom"/>
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
