--- a/app/src/main/res/drawable/icon_close_stroke_white.xml
+++ b/app/src/main/res/drawable/icon_close_stroke_white.xml
@@ -1,20 +1,27 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="13dp"
-    android:height="13dp"
-    android:viewportWidth="10"
+    android:width="20dp"
+    android:height="16dp"
+    android:viewportWidth="14"
     android:viewportHeight="10">
-    <path
-        android:pathData="M1,1L9,9"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="@color/white"
-        android:strokeColor="@color/white"
-        android:strokeLineCap="round"/>
-    <path
-        android:pathData="M1,9L9,1"
-        android:strokeLineJoin="round"
-        android:strokeWidth="2"
-        android:fillColor="@color/white"
-        android:strokeColor="@color/white"
-        android:strokeLineCap="round"/>
+  <path
+      android:pathData="M4.083,1.208L1.167,5L4.083,8.792H12.833V1.208H4.083Z"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.16667"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M6.125,3.542L9.042,6.458"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.16667"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M9.042,3.542L6.125,6.458"
+      android:strokeLineJoin="round"
+      android:strokeWidth="1.16667"
+      android:fillColor="#00000000"
+      android:strokeColor="#ffffff"
+      android:strokeLineCap="round"/>
 </vector>
