--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -207,6 +207,7 @@
                             <ImageButton
                                 android:id="@+id/imgbtnEmoji"
                                 android:layout_weight="1"
+                                android:visibility="gone"
                                 android:layout_width="40dp"
                                 android:layout_height="40dp"
                                 android:src="@drawable/icon_emoji_black"
@@ -261,6 +262,31 @@
                                 android:layout_marginRight="5dp"
                                 android:background="?selectableItemBackgroundBorderless"/>
                             <ImageButton
+                                android:id="@+id/imgbtnListBullet"
+                                android:layout_weight="1"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:src="@drawable/icon_bullet_list"
+                                android:layout_marginRight="5dp"
+                                android:background="?selectableItemBackgroundBorderless"/>
+
+                            <ImageButton
+                                android:id="@+id/imgbtnIndentLeft"
+                                android:layout_weight="1"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:src="@drawable/icon_indent_left"
+                                android:layout_marginRight="5dp"
+                                android:background="?selectableItemBackgroundBorderless"/>
+                            <ImageButton
+                                android:id="@+id/imgbtnIndentRight"
+                                android:layout_weight="1"
+                                android:layout_width="40dp"
+                                android:layout_height="40dp"
+                                android:src="@drawable/icon_indent_right"
+                                android:layout_marginRight="5dp"
+                                android:background="?selectableItemBackgroundBorderless"/>
+                            <ImageButton
                                 android:visibility="gone"
                                 android:id="@+id/imgbtnTag"
                                 android:layout_weight="1"
@@ -278,7 +304,7 @@
                                 android:src="@drawable/icon_voice_black"
                                 android:layout_marginRight="5dp"
                                 android:background="?selectableItemBackgroundBorderless"/>
-                        </LinearLayout>
+                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
 
@@ -448,7 +474,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:gravity="center"
-                                android:text="Font"
+                                android:text="Background"
                                 android:textColor="@color/black"
                                 android:fontFamily="@font/inter_bold"
                                 android:textSize="15sp"/>
@@ -517,18 +543,6 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-        </LinearLayout>
-        <!--    Emoji-->
-        <LinearLayout
-            android:visibility="gone"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-            <com.aghajari.emojiview.view.AXEmojiEditText
-                android:id="@+id/edt"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="enter your message ..." />
         </LinearLayout>
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
