--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -206,6 +206,7 @@
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigationView"
         app:itemIconTint="@null"
+        app:itemTextColor="#2B2F31"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:headerLayout="@layout/navdrawer_header_mainactivity"
