--- a/app/src/main/res/layout/activity_mine.xml
+++ b/app/src/main/res/layout/activity_mine.xml
@@ -62,6 +62,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:src="@drawable/p41_background_main_1"
+                            android:alpha="0.6"
                             android:scaleType="centerCrop"/>
                     </LinearLayout>
                     <LinearLayout
