--- a/app/src/main/res/layout/activity_security_password.xml
+++ b/app/src/main/res/layout/activity_security_password.xml
@@ -31,7 +31,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="#CCFFFFFF"
                     android:hint="Question..."
                     android:layout_margin="10dp"
                     android:fontFamily="@font/inter_medium"
@@ -54,7 +54,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/white"
+                    android:textColorHint="#CCFFFFFF"
                     android:hint="Answer..."
                     android:layout_margin="10dp"
                     android:fontFamily="@font/inter_medium"
@@ -72,15 +72,21 @@
                 android:textColor="@color/black"
                 android:fontFamily="@font/inter_bold"/>
         </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_margin="20dp">
-            <ImageView
-                android:id="@+id/imgClose"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:src="@drawable/icon_close_stroke_white"/>
-        </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical">
+
+        <ImageButton
+            android:id="@+id/imgClose"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="?selectableItemBackgroundBorderless"
+            android:src="@drawable/icon_back_white" />
+    </LinearLayout>
     </RelativeLayout>
