--- a/app/src/main/res/layout/item_rcvdiary.xml
+++ b/app/src/main/res/layout/item_rcvdiary.xml
@@ -9,7 +9,10 @@
         android:layout_height="wrap_content"
         app:cardBackgroundColor="#F3FAFD"
         app:cardCornerRadius="20dp"
-        android:layout_margin="20dp">
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -98,10 +101,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
-                android:layout_marginBottom="10dp"
+                android:layout_marginBottom="20dp"
                 android:orientation="vertical">
                 <TextView
                     android:layout_marginTop="5dp"
@@ -111,16 +113,15 @@
                     android:textColor="#797D7E"
                     android:textSize="15sp"
                     android:maxLines="3"
-                    android:ellipsize="end"
                     android:text="Java thường được gọi là ngôn ngữ WORA (Viết một lần, chạy ở mọi nơi), khiến nó
 trở thành ngôn ngữ lý tưởng cho các ứng dụng phi tập trung dựa trên đám mây..."/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcvMediaDemo"
+                    android:visibility="gone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginBottom="10dp"/>
+                    android:layout_marginTop="10dp"/>
             </LinearLayout>
 
 
