--- a/app/src/main/res/layout/item_vptheme.xml
+++ b/app/src/main/res/layout/item_vptheme.xml
@@ -4,5 +4,4 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/imgItemTheme"
-        android:layout_margin="10dp"
-        android:src="@drawable/kaka"/>
+        android:layout_margin="10dp"/>
