--- a/app/src/main/res/layout/activity_diary.xml
+++ b/app/src/main/res/layout/activity_diary.xml
@@ -22,8 +22,8 @@
                 android:id="@+id/close"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/icon_close_stroke"
-                android:layout_marginLeft="20dp"
+                android:src="@drawable/icon_back_black"
+                android:layout_marginLeft="10dp"
                 android:background="?selectableItemBackgroundBorderless"/>
         </LinearLayout>
         <LinearLayout
@@ -72,6 +72,20 @@
                         android:gravity="center"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/toolbar_mainactivity"
+            android:orientation="horizontal"
+            android:gravity="right|center">
+            <ImageButton
+                android:id="@+id/editMode"
+                android:layout_width="40dp"
+                android:visibility="gone"
+                android:layout_height="40dp"
+                android:src="@drawable/baseline_edit_note_24"
+                android:layout_marginRight="20dp"
+                android:background="?selectableItemBackgroundBorderless"/>
         </LinearLayout>
         <!--    Toolbar 2-->
         <RelativeLayout
@@ -543,6 +557,22 @@
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/llLoadingScene"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:background="@color/white">
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/animationView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:lottie_speed="1.2"
+                app:lottie_fileName="99297-loading-files.json"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"/>
         </LinearLayout>
     </RelativeLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
