--- a/app/src/main/res/layout/item_rcvdiary.xml
+++ b/app/src/main/res/layout/item_rcvdiary.xml
@@ -79,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layout_gravity="left"
+                android:layout_marginTop="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
                 <TextView
@@ -89,7 +90,7 @@
                     android:text="Name"
                     android:fontFamily="@font/inter_bold"
                     android:textColor="@color/black"
-                    android:textSize="15sp"/>
+                    android:textSize="20sp"/>
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.5dp"
