-Đổi vị trí nút Xóa và Edit trong ViewDiaryActivity -Fix bug xuống hàng khi thêm ảnh -Ẩn tính năng Câu Hỏi Bảo Mật -Ẩn tính năng reset pas

--- a/app/src/main/res/layout/activity_lock_app.xml
+++ b/app/src/main/res/layout/activity_lock_app.xml
@@ -85,6 +85,7 @@
                     android:textSize="12sp"/>
         </LinearLayout>
         <LinearLayout
+            android:visibility="gone"
             android:id="@+id/llSecurityQuestion"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
