--- a/app/src/main/res/layout/activity_easy_lockscreen.xml
+++ b/app/src/main/res/layout/activity_easy_lockscreen.xml
@@ -255,6 +255,7 @@
 
 
     <TextView
+        android:visibility="invisible"
         android:id="@+id/forgot_pass_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
